@@ -1919,6 +1919,8 @@ sub serveraction {
         return(1, 'not a valid customaction url');
     }
 
+    $c->log->debug('running server action: '.$action.' for user '.$c->stash->{'remote_user'});
+
     my @args = split(/\//mx, $action);
     $action = shift @args;
     if(!defined $c->config->{'action_menu_actions'}->{$action}) {
@@ -1926,6 +1928,7 @@ sub serveraction {
     }
     my @cmdline = split(/\s+/mx, $c->config->{'action_menu_actions'}->{$action});
     my $cmd = shift @cmdline;
+    $c->log->debug('raw cmd line: '.$cmd.' "'.(join('" "', @cmdline)).'"');
     if(!-x $cmd) {
         return(1, $cmd.' is not executable');
     }
@@ -1951,6 +1954,7 @@ sub serveraction {
         my $rc;
         ($arg, $rc) = $c->{'db'}->replace_macros($arg, {}, $macros);
     }
+    $c->log->debug('parsed cmd line: '.$cmd.' "'.(join('" "', @cmdline)).'"');
 
     my($rc, $output);
     eval {
