@@ -9,6 +9,7 @@ next:
             - add clean dashboards button in dashboard management all tab
             - add cli command to clean dashboards
             - add scrollbars for large maps
+            - add action menus for dashboards
             - fix grid panels not restoring column width
           - Reports:
             - add quarterly and half year reports
